# tika-proxy

./: Dockerfile  README.md  check.http  env.py  headers.py  main.py  pdf.py  pyproject.toml  requests.py  tika.py
.github/workflows/: docker-image.yml
